[FIX] z-index on all project

--- a/assets/css/category.scss
+++ b/assets/css/category.scss
@@ -109,9 +109,6 @@
       margin-top: 6.25rem;
     }
   }
-  ::v-deep .sf-sidebar__aside {
-    --sidebar-z-index: 3;
-  }
   
   
   ::v-deep .sf-accordion-item__content {
