--- a/assets/css/detailedCollectedProduct.scss
+++ b/assets/css/detailedCollectedProduct.scss
@@ -39,7 +39,7 @@
   }
   
   ::v-deep .sf-checkbox__checkmark {
-    width: 34px !important;
+    width: 35px !important;
     height: 24px !important;
     margin-right: 3% !important;
   }
