--- a/assets/css/greenHeader.scss
+++ b/assets/css/greenHeader.scss
@@ -53,9 +53,6 @@
     column-gap: 15px;
   }
   
-  ::v-deep .sf-sidebar__aside {
-    z-index: var(--sidebar-z-index, 4);
-  }
   
   ::v-deep .sf-header__wrapper {
     border-bottom: 1px solid #f1f2f3;
